# A2ICD

./: .gitignore  Dockerfile  README.md  create_vector_store.py  icd.py  interface.py  mvp.py  pyproject.toml  requirements.txt
